--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "bcrypt": "^5.1.1",
     "git": "^0.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
