--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.0.6",
     "git": "^0.1.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-easy-crop": "^5.0.5",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-timer-hook": "^3.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,5 +39,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   }
 }
